2009-02-02  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-transition.c (hd_transition_subview): Check if the views
	have cm_clients at all before using them.

2009-02-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* test/portrait-common.c
	* test/test-portrait-dlg.c
	* test/test-portrait-win.c:
	  New test programs.
	* test/test-portrait.c:
	  Obsolete, removed.

2009-02-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Initial support for portrait mode.

	* configure.ac:
	* debian/control:
	  Declared dependency on libxrandr-dev

	* src/launcher/hd-app-mgr.h
	* src/launcher/hd-app-mgr.c:
	  New debugging function: hd_app_mgr_dump_app_list()
	* src/mb/hd-atoms.h
	* src/mb/hd-atoms.c:
	  New atoms: _HILDON_PORTRAIT_MODE_REQUEST and _HILDON_PORTRAIT_MODE_SUPPORT.
	* src/mb/hd-app.c:
	  Removed the show(), hide() and focus() overrides that changed the state
	  to APP_FULLSCREEN.  Instead override MBWindowManagerClient::stacking_layer.
	* src/home/hd-switcher.h
	* src/home/hd-switcher.c:
	  Removed status area and menu handing and some interaction with home.
	* src/home/hd-home.h
	* src/home/hd-home.c:
	  Removed status area allocation tracking.
	* src/mb/hd-status-area.c:
	  Take the visibility of the Tasks button into account when configuring
	  the inital geometry of the client.
	* src/mb/hd-dialog.c:
	  Process all ->geometry() calls not only the ones changing the height
	  of the dialog.
	* src/home/hd-task-navigator.c:
	  Don't break if the WM was started in portrait mode.

	* src/launcher/hd-launcher-page.h
	* src/launcher/hd-launcher-grid.c
	* src/launcher/hd-launcher.c
	* src/home/hd-home.c
	* src/home/hd-home-view.c:
	  Always assume landscape orientation.

	* src/home/hd-render-manager.h
	* src/home/hd-render-manager.c:
	  hd_render_manager_set_input_viewport():
	    Block the status area in portrait mode.
	  hd_render_manager_set_order():
	    Added HDRM_STATE_APP_PORTRAIT,
	    recalculate the position of the oplogo, status area and app title,